--- a/dbt_code/dbt_project.yml
+++ b/dbt_code/dbt_project.yml
@@ -1,12 +1,11 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'dbt_code'
-version: '1.0.0'
+name: "hire"
+version: "1.0.0"
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'dbt_code'
+profile: "project_HiRe"
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -18,10 +17,9 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-clean-targets:         # directories to be removed by `dbt clean`
+clean-targets: # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
-
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -30,7 +28,17 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  dbt_code:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+  project_HiRe:
+    +materialized: view
+
+    src:
+      +materialized: ephemeral
+
+    dim:
+      +schema: refined
+
+    fct:
+      +schema: refined
+
+    marts:
+      +schema: marts
