--- a/requirements.mac.txt
+++ b/requirements.mac.txt
@@ -73,6 +73,7 @@ smmap==5.0.2
 snowplow-tracker==1.1.0
 sqlglot==26.16.2
 sqlparse==0.5.3
+streamlit==1.35.0
 tenacity==9.1.2
 text-unidecode==1.3
 tomlkit==0.13.2
