added row-test, and changed identifier

--- a/dbt_code/models/src/sources.yml
+++ b/dbt_code/models/src/sources.yml
@@ -3,4 +3,4 @@ sources:
     schema: staging
     tables:
       - name: stg_ads
-        identifier: job_ads
+        identifier: data_field_job_ads #changed according to study material
