duplicates almost solved. project.yml changes, row_number added to mart etc.

--- a/dbt_code/dbt_project.yml
+++ b/dbt_code/dbt_project.yml
@@ -19,13 +19,16 @@ models:
     +materialized: view
 
     src:
-      +materialized: ephemeral
+      +materialized: view
 
     dim:
       +schema: refined
+      +materialized: view
 
     fct:
       +schema: refined
+      +materialized: view
 
     mart:
       +schema: marts
+      +materialized: table
