--- a/dbt_code/models/src/sources.yml
+++ b/dbt_code/models/src/sources.yml
@@ -1,6 +1,26 @@
+# version: 2
+
+# sources:
+#   - name: job_ads
+#     schema: staging
+#     tables:
+#       - name: stg_ads
+#         identifier: data_field_job_ads
+#         tests:
+#           - dbt_utils.expression_is_true:
+#               name: unique_id_in_stg_ads
+#               expression: count(*) = 1
+#               group_by: id
+
+version: 2
+
 sources:
   - name: job_ads
     schema: staging
     tables:
       - name: stg_ads
-        identifier: data_field_job_ads #changed according to study material
+        identifier: data_field_job_ads
+        tests:
+          - dbt_utils.unique_combination_of_columns:
+              name: unique_id_in_stg_ads
+              combination_of_columns: [id]
