--- a/dbt_code/dbt_project.yml
+++ b/dbt_code/dbt_project.yml
@@ -1,4 +1,4 @@
-# Name your project! Project names should contain only lowercase characters
+# name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
 name: "hire"
@@ -25,10 +25,10 @@ clean-targets: # directories to be removed by `dbt clean`
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
 # In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
+# directory as views. These settings can be overridden in the indiuvidual model
 # files using the `{{ config(...) }}` macro.
 models:
-  project_HiRe:
+  hire:
     +materialized: view
 
     src:
@@ -41,4 +41,5 @@ models:
       +schema: refined
 
     marts:
-      +schema: marts
+      +materialized: view
+      +schema: mart
