changed mart model schema name to mart and materialized to view

--- a/dbt_code/dbt_project.yml
+++ b/dbt_code/dbt_project.yml
@@ -30,5 +30,5 @@ models:
       +materialized: view
 
     mart:
-      +schema: marts
-      +materialized: table
+      +schema: mart
+      +materialized: view
